Fixed social buttons aligning

--- a/hhs-p6-webshop-project/wwwroot/css/site.css
+++ b/hhs-p6-webshop-project/wwwroot/css/site.css
@@ -1806,6 +1806,8 @@ footer ul {
 
 .social-buttons {
     margin: 50px 0 25px 0;
+    display: flex;
+    justify-content: center;
 }
 
 .social-buttons a {
